# GestureWithMLImitate

./: .gitignore  README.md  aggregate_dataset.py  analyze_wt_doppler.py  convert_json_to_csv.py  data.dvc  extract_out_of_range.py  move_rename.py  pyproject.toml  train_mlp.py  train_prototypical_mlp.py
.dvc/: config
DataSet/D2U/: 0_down2up.csv  10.0_down2up.json  10_down2up.csv  11.0_down2up.json  11_down2up.csv  12.0_down2up.json  12_down2up.csv  13_down2up.csv  14_down2up.csv  15_down2up.csv  16_down2up.csv  17.0_down2up.json  17_down2up.csv  18.0_down2up.json  18_down2up.csv  19_down2up.csv  1_down2up.csv  2.0_down2up.json  20_down2up.csv  21.0_down2up.json  21_down2up.csv  22.0_down2up.json  22_down2up.csv  23.0_down2up.json  23_down2up.csv  24_down2up.csv  25.0_down2up.json  25_down2up.csv  26.0_down2up.json  26_down2up.csv  27.0_down2up.json  27_down2up.csv  28_down2up.csv  29_down2up.csv  2_down2up.csv  3.0_down2up.json  30_down2up.csv  31_down2up.csv  32_down2up.csv  33.0_down2up.json  (+39 more)
DataSet/L2R/: 0_left2right.csv  10.0_left2right.json  10_left2right.csv  11.0_left2right.json  11_left2right.csv  12.0_left2right.json  12_left2right.csv  13_left2right.csv  14.0_left2right.json  14_left2right.csv  15.0_left2right.json  15_left2right.csv  16.0_left2right.json  16_left2right.csv  17.0_left2right.json  17_left2right.csv  18.0_left2right.json  18_left2right.csv  19_left2right.csv  1_left2right.csv  2.0_left2right.json  20.0_left2right.json  20_left2right.csv  21.0_left2right.json  21_left2right.csv  22.0_left2right.json  22_left2right.csv  23.0_left2right.json  (+57 more)
(+532 files in other folders)
