[project]
name = "gesturewithmlimitate"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "numpy (>=2.3.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "optuna (>=4.6.0,<5.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "torchvision (>=0.24.1,<0.25.0)",
    "torchaudio (>=2.9.1,<3.0.0)",
    "torch (>=2.9.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch_cu130"
url = "https://download.pytorch.org/whl/cu130"
priority = "explicit"


[tool.poetry.dependencies]
torchvision = {source = "pytorch_cu130"}
torchaudio = {source = "pytorch_cu130"}
torch = {source = "pytorch_cu130"}

[dependency-groups]
dev = [
    "dvc (>=3.64.0,<4.0.0)",
    "dvc-gdrive (>=3.0.1,<4.0.0)",
    "pyopenssl (>=25.3.0,<26.0.0)",
    "cryptography (>=46.0.3,<47.0.0)"
]
